rust/crates/ccusage/tests/snapshots/dsh_cli__dsh_cli_daily_table.snap
---
source: crates/ccusage/tests/dsh_cli.rs
expression: "format!(\"stdout:\\n{stdout}\\nstderr:\\n{stderr}\")"
---
stdout:

╭────────────────────────────────────────────╮
│                                            │
│           DSH Token Usage Report           │
│                                            │
╰────────────────────────────────────────────╯

┌────────────┬──────────────────┬───────────┬───────────┬───────────────┬─────────────┬───────────────┬─────────────┐
│ Date       │ Models           │     Input │    Output │  Cache Create │  Cache Read │  Total Tokens │  Cost (USD) │
├────────────┼──────────────────┼───────────┼───────────┼───────────────┼─────────────┼───────────────┼─────────────┤
│ 1970-01-01 │ - deepseek-flash │       650 │        65 │             0 │           0 │           715 │       $0.00 │
│            │ - glm-5.3-flash  │           │           │               │             │               │             │
├────────────┼──────────────────┼───────────┼───────────┼───────────────┼─────────────┼───────────────┼─────────────┤
│ Total      │                  │       650 │        65 │             0 │           0 │           715 │       $0.00 │
└────────────┴──────────────────┴───────────┴───────────┴───────────────┴─────────────┴───────────────┴─────────────┘

stderr:
WARN  Missing embedded pricing for deepseek-flash; cost excludes this model. Run without --offline or update ccusage after pricing is added.
