rust/crates/ccusage/tests/snapshots/dsh_cli__dsh_cli_session_table.snap
---
source: crates/ccusage/tests/dsh_cli.rs
expression: "format!(\"stdout:\\n{stdout}\\nstderr:\\n{stderr}\")"
---
stdout:

╭────────────────────────────────────────────╮
│                                            │
│           DSH Token Usage Report           │
│                                            │
╰────────────────────────────────────────────╯

┌──────────┬───────────────┬───────────┬───────────┬─────────────┬────────────┬────────────┬────────────┬──────────────┐
│ Session  │ Models        │     Input │    Output │       Cache │ Cache Read │      Total │ Cost (USD) │ Last         │
│          │               │           │           │      Create │            │     Tokens │            │ Activity     │
├──────────┼───────────────┼───────────┼───────────┼─────────────┼────────────┼────────────┼────────────┼──────────────┤
│ session… │ - deepseek-f… │       350 │        35 │           0 │          0 │        385 │      $0.00 │ 1970-01-01   │
│          │ - glm-5.3-fl… │           │           │             │            │            │            │              │
├──────────┼───────────────┼───────────┼───────────┼─────────────┼────────────┼────────────┼────────────┼──────────────┤
│ session… │ - deepseek-f… │       300 │        30 │           0 │          0 │        330 │      $0.00 │ 1970-01-01   │
├──────────┼───────────────┼───────────┼───────────┼─────────────┼────────────┼────────────┼────────────┼──────────────┤
│ Total    │               │       650 │        65 │           0 │          0 │        715 │      $0.00 │              │
└──────────┴───────────────┴───────────┴───────────┴─────────────┴────────────┴────────────┴────────────┴──────────────┘

stderr:
WARN  Missing embedded pricing for deepseek-flash; cost excludes this model. Run without --offline or update ccusage after pricing is added.
